# gold-price-tracker

./: .gitignore  CNAME  README.md  app-bak.py  create_dashboards.py  gold_prices.csv  gold_prices.txt  index.html  pyproject.toml
.github/workflows/: deploy_dashboard.yaml  main.yaml
dashboard/: index.html
src/gold-price-tracker/gold/: gold_price_tracker.py
