[tool.poetry]
name = "gold-price-tracker"
version = "0.1.0-beta"
description = "A tool to get gold price from chennai merchant"
authors = ["Arumugam Subramanian"]
readme = "README.md"
packages = [
    { include = "gold-price-tracker", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
selenium = "^4.10.0"
tabulate = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gold-price-tracker = "gold-price-tracker.gold.gold_price_tracker:main"
convert-text = "gold-price-tracker.gold.gold_price_tracker:convert_txt_csv"
